<resources>
    <string name="app_name">FavCats</string>
    <string name="bandi_cat">Bandi cat</string>
    <string name="favorite_cats">Favorite cats</string>
    <string name="random_royalty_free_cat">random royalty free cat</string>
    <string name="new_cat">New cat</string>
    <string name="button">Button</string>
    <string name="show_new_random_cat">Show new random cat</string>
    <string name="cat_image">Cat image</string>
    <string name="sample_text">Sample text</string>
    <string name="remove_item">Remove item</string>
    <string name="add_to_favorites">Add to favorites ❤️</string>
</resources>