<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/teal_700"
    android:clipToPadding="false"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/cat_image"
            android:src="@drawable/bandi_sq"
            app:circularflow_defaultRadius="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="238dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/sample_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/cardImage"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/cardRemoveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/remove_item"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/cardImage"
            app:layout_constraintTop_toBottomOf="@+id/cardTitle">

        </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>